# speech_controller

./: .env.template  README.md  main.py  pyproject.toml
componment/: ai.py  audio.py
tool/: count_people.py  play_sound.py  s3.py  speech_to_text.py  tool.py
